# FlowShot

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: RULES.md
flowshot/: __init__.py  analyzer.py  cli.py  converter.py  renderer.py  scanner.py  schema.py  theme.py
