[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowshot"
version = "0.1.0"
description = "Turn codebases into branded workflow diagrams using LLMs. Built for engineers who ship, not designers."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "cairosvg>=2.7.0",
    "click>=8.0.0",
]

[project.scripts]
flowshot = "flowshot.cli:main"

[project.optional-dependencies]
dev = ["pytest", "ruff"]
